[metadata]
name = zhinst
author = Zurich Instrument
author_email = info@zhinst.com
description = Zurich Instruments Python API
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Development Status :: 5 - Production/Stable
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Topic :: Scientific/Engineering
    Intended Audience :: Science/Research

[options]
python_requires = >=3.7
use_scm_version = True
install_requires =
    zhinst.core == 23.6.45404
    zhinst.utils == 0.3.2
    zhinst.toolkit == 0.6.0
