[metadata]
name = zhinst
author = Zurich Instrument
author_email = info@zhinst.com
description = Zurich Instruments Python API
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Development Status :: 5 - Production/Stable
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Programming Language :: Python :: 3.13
    Programming Language :: Python :: 3.14
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Topic :: Scientific/Engineering
    Intended Audience :: Science/Research

[options]
python_requires = >=3.10
use_scm_version = True
install_requires =
    zhinst.core == 26.1.1.16
    zhinst.utils == 0.7.1
    zhinst.toolkit == 1.3.0
